Labs/Lab5/weatherapp_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: ns99
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weather-app
        image: cielciel/weather-app:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: myreg-sec
