Labs/Lab5/weatherapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: ns99
spec:
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
