Labs/Lab5/weatherapp_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
  namespace: ns99
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: weather-app.211.34.229.118.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-app
            port:
              number: 80
